# Agentic-Trading-Floor

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml
backend/: accounts.py  accounts_client.py  api.py  database.py  market.py  market_simulator.py  mcp_servers.py  reset.py  templates.py  traders.py  trading_floor.py
demo/: __init__.py  ui.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  chart.ts  heatmap.ts  log.ts  main.ts  panel.ts  state.ts  styles.css  theme.ts  transactions.ts
