[project]
name = "agentic-trading-floor"
version = "0.1.0"
description = "Multi-agent AI trading platform with MCP servers and dual dashboards"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai-agents>=0.0.14",
    "openai>=1.0",
    "gradio>=6.0",
    "pandas>=2.0",
    "plotly>=5.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "mcp>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "requests>=2.31",
    "massive>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "demo"]

[tool.uv]
dev-dependencies = []
